--- a/cosmo_tutorial/cosmo_tutorial.ipynb
+++ b/cosmo_tutorial/cosmo_tutorial.ipynb
@@ -5,8 +5,8 @@
    "id": "3d714935",
    "metadata": {},
    "source": [
-    "# GWFish Tutorial\n",
-    "This is a brief guide on how to use GWFish software"
+    "# Cosmo Tutorial\n",
+    "This is a brief guide on how to use GWFish to produce cosmological inferences"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "id": "8558a276",
    "metadata": {},
    "source": [
-    "# Let's create asuitable catalog of events"
+    "# Let's create suitable catalog of events"
    ]
   },
   {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "f6cdef7f",
    "metadata": {},
    "outputs": [],
@@ -267,62 +267,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2976f89e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([2.64963024, 1.64137516, 3.14975261, 2.34138958, 0.80291127,\n",
-       "        5.27148296, 2.59149473, 2.70771256, 0.90931138, 1.6676029 ,\n",
-       "        1.4892799 , 3.88977006, 2.16682371, 2.90713799, 1.65168862,\n",
-       "        1.16616536, 1.91856038, 0.69008596, 2.93683554, 2.13020989,\n",
-       "        2.57811276, 1.45334372, 5.02770733, 3.45764707, 2.67049175,\n",
-       "        1.08724592, 1.70521469, 0.59887001, 0.98290824, 2.29213939,\n",
-       "        2.52158456, 4.89292937, 1.38994428, 1.48853211, 1.71179223,\n",
-       "        1.07435741, 0.91459062, 1.7261156 , 1.16538565, 2.24836844,\n",
-       "        1.63745726, 2.96857629, 2.35161252, 1.36010936, 2.96590595,\n",
-       "        2.80442734, 1.52620701, 1.3064656 , 2.29027668, 0.94275486,\n",
-       "        1.1002709 , 0.31683868, 2.71196529, 2.23235336, 2.3691144 ,\n",
-       "        2.68171617, 1.68718334, 1.95529571, 0.94288038, 0.86852284,\n",
-       "        2.24379386, 1.7153732 , 1.94612358, 2.60866293, 2.13927949,\n",
-       "        1.91598156, 1.93046633, 1.3413887 , 0.52619956, 1.63647187,\n",
-       "        1.13597539, 1.5730552 , 3.11069581, 1.18195794, 0.66674068,\n",
-       "        1.29085123, 1.31826612, 2.22298215, 1.92485373, 2.69707911]),\n",
-       " array([22404.31654042, 12502.97300889, 27580.41755756, 19290.55926922,\n",
-       "         5185.19946125, 50720.34106763, 21812.18436637, 22998.03065752,\n",
-       "         6041.27008651, 12748.61323913, 11094.6784567 , 35465.17787039,\n",
-       "        17557.54608877, 25051.92141682, 12599.47152497,  8208.17052509,\n",
-       "        15136.33763747,  4309.06185947, 25359.72718052, 17197.12528532,\n",
-       "        21676.19137294, 10766.1983329 , 47987.37385153, 30831.6420662 ,\n",
-       "        22617.32050202,  7528.74448629, 13102.22812443,  3627.59934807,\n",
-       "         6648.57955281, 18799.25315354, 21103.02606799, 46483.31674397,\n",
-       "        10190.93886888, 11087.82590387, 13164.22939562,  7418.87080026,\n",
-       "         6084.43744228, 13299.40829726,  8201.40369359, 18364.14710368,\n",
-       "        12466.34712355, 25689.24752538, 19392.76616174,  9922.1773733 ,\n",
-       "        25661.50386525, 23991.19684523, 11433.96618854,  9442.21049672,\n",
-       "        18780.7070607 ,  6315.78057135,  7640.09780304,  1706.73385099,\n",
-       "        23041.58364592, 18205.31863259, 19567.92396973, 22732.03849218,\n",
-       "        12932.50570222, 15491.12744056,  6316.81556908,  5709.90077998,\n",
-       "        18318.75867783, 13198.00431901, 15402.42463657, 21986.82410806,\n",
-       "        17286.30209703, 15111.4792505 , 15251.1864635 ,  9754.19357139,\n",
-       "         3103.90899096, 12457.13813621,  7946.94027557, 11866.88076511,\n",
-       "        27171.29005005,  8345.45441639,  4132.23920457,  9303.31742386,\n",
-       "         9547.42492333, 18112.4734347 , 15197.02873298, 22889.18006935]))"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z_samples, dL_samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "id": "7a059436",
    "metadata": {},
    "outputs": [
@@ -350,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2cd32669",
    "metadata": {},
    "outputs": [],
@@ -370,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "4b8523f2",
    "metadata": {},
    "outputs": [],
@@ -392,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e3b6dbc8",
    "metadata": {},
    "outputs": [],
@@ -412,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "91fc041d",
    "metadata": {},
    "outputs": [
@@ -440,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "6d07804a",
    "metadata": {},
    "outputs": [
@@ -477,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "542ea834",
    "metadata": {},
    "outputs": [
@@ -600,7 +544,7 @@
        "4  0.076745  1.101403  0.752488  1.595608e+09  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,18 +556,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "3642ceb2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Directory already exists:  /Users/andreacozzumbo/GSSIprojects/acme_tutorials/cosmo_tutorial/output\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "catalog_folder = os.path.join(os.getcwd(), \"output\")\n",
     "\n",
@@ -637,12 +573,12 @@
    "id": "4ef15b35",
    "metadata": {},
    "source": [
-    "# Let's use GWFish!"
+    "# Let's use GWFish! We will first use raw GWFish and then apply physical priors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "24c69dd4",
    "metadata": {},
    "outputs": [],
@@ -652,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "759aa6b3",
    "metadata": {},
    "outputs": [],
@@ -675,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "977150b0",
    "metadata": {},
    "outputs": [
@@ -798,7 +734,7 @@
        "4  0.076745  1.101403  0.752488  1.595608e+09  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "b404e0e7",
    "metadata": {},
    "outputs": [
@@ -818,7 +754,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 80/80 [00:10<00:00,  7.53it/s]\n"
+      "100%|██████████| 80/80 [00:09<00:00,  8.09it/s]\n"
      ]
     }
    ],
@@ -856,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "e79fa53a",
    "metadata": {},
    "outputs": [],
@@ -868,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "f9023922",
    "metadata": {},
    "outputs": [],
@@ -891,6 +827,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "e1f52afa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_thr = 0.13\n",
+    "check_z_thr = means[means['redshift'] < z_thr]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "id": "54f63300",
    "metadata": {},
@@ -900,7 +847,26 @@
     "plotPosteriors = False\n",
     "DensityPlot = False\n",
     "PlotPeculiar = False\n",
-    "include_vp = False"
+    "\n",
+    "# if check_z_thr is empty then skip\n",
+    "\n",
+    "if check_z_thr.empty:\n",
+    "    include_vp = False\n",
+    "else:\n",
+    "    include_vp = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88ffac86",
+   "metadata": {},
+   "source": [
+    "## Example of Applications\n",
+    "\n",
+    "See Figure 1 in [**Cozzumbo, et al. 2024**](https://iopscience.iop.org/article/10.1088/1475-7516/2025/05/021/pdf)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -913,7 +879,6 @@
     "mns = means[lbs_mns]\n",
     "NN = len(mns)\n",
     "N = 100_000\n",
-    "zz = np.linspace(0.0001, 5, 1000)\n",
     "zmax = max(means['redshift'])\n",
     "\n",
     "m1min = 1.1\n",
@@ -960,35 +925,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "c0f81cd3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 53%|█████▎    | 18/34 [00:14<00:12,  1.32it/s]WARNING:root:Covariance not PSD, applying eigenvalue clipping...\n",
-      "100%|██████████| 34/34 [00:25<00:00,  1.31it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Max z seen: 2.969\n",
-      "Skipped events [name, redshift]: []\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# for each event we proceed to the truncation and then to the prior evaluation and posterior sampling from a physically motivated prior-informed likelihood\n",
     "\n",
     "for event in tqdm(np.arange(NN)):\n",
     "\n",
@@ -1141,6 +1083,8 @@
     "        plt.close()\n",
     "\n",
     "\n",
+    "    # here we save the posterior samples for the luminosity distance only, to be used in the cosmological analysis\n",
+    "    # we use getdist kde interpolation, that is fast and flexible\n",
     "    # SAVE ALL POSTERIORS\n",
     "    \n",
     "    weights, edges, _ = plt.hist(samples_from_posterior['luminosity_distance'].to_numpy(), bins=100, density=True)\n",
@@ -1193,11 +1137,12 @@
     "out_path_kde = f\"{mother_dir}/output/kde\"\n",
     "create_dir(out_path_kde)\n",
     "\n",
+    "# if there are elements with z < z_thr, then we apply the correction\n",
+    "\n",
     "if include_vp:\n",
     "    print('Peculiar velocity correction on going')\n",
     "    print('Starting the peculiar velocity analysis\\n')\n",
     "    # include vp correction\n",
-    "    z_thr = 0.13\n",
     "    \n",
     "    dt = {}\n",
     "    dt['z'] = z_list\n",
@@ -1304,6 +1249,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "12b74f32",
+   "metadata": {},
+   "source": [
+    "## we generate a likelihood and we run a cosmological MCMC with [cobaya](https://cobaya.readthedocs.io/en/latest/#)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06c898d5",
+   "metadata": {},
+   "source": [
+    "## this is interfaced with a Einstein-Boltzmann solver called [CLASS](http://class-code.net)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "cbf21f1d",
@@ -1368,6 +1329,7 @@
     }
    ],
    "source": [
+    "# installing CLASS\n",
     "os.system(f\"cobaya-install classy -p {mother_dir}/myclass\")"
    ]
   },
@@ -1469,59 +1431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "7e2542eb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 : output] Output to be read-from/written-into folder '/Users/andreacozzumbo/GSSIprojects/acme_tutorials/cosmo_tutorial/cosmo_MCMC/chains/test1', with prefix 'test'\n",
-      "[0 : output] Found existing info files with the requested output prefix: '/Users/andreacozzumbo/GSSIprojects/acme_tutorials/cosmo_tutorial/cosmo_MCMC/chains/test1/test'\n",
-      "[0 : output] *ERROR* Delete the previous output manually, automatically ('-f', '--force', 'force: True') or request resuming ('-r', '--resume', 'resume: True')\n",
-      "[0 : run] Aborting MPI due to error\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "--------------------------------------------------------------------------\n",
-      "MPI_ABORT was invoked on rank 0 in communicator MPI_COMM_WORLD\n",
-      "  Proc: [[6797,1],0]\n",
-      "  Errorcode: 1\n",
-      "\n",
-      "NOTE: invoking MPI_ABORT causes Open MPI to kill all MPI processes.\n",
-      "You may or may not see output from other processes, depending on\n",
-      "exactly when Open MPI kills them.\n",
-      "--------------------------------------------------------------------------\n",
-      "--------------------------------------------------------------------------\n",
-      "prterun has exited due to process rank 0 with PID 0 on node Mac-AC calling\n",
-      "\"abort\". This may have caused other processes in the application to be\n",
-      "terminated by signals sent by prterun (as reported here).\n",
-      "--------------------------------------------------------------------------\n",
-      "\u0000"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "256"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.system(f'mpirun -n 4 cobaya-run {input_file}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "id": "88a34a8a",
    "metadata": {},
    "outputs": [],
@@ -1532,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "id": "13488bca",
    "metadata": {},
    "outputs": [],
@@ -1543,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "id": "b01b41ef",
    "metadata": {},
    "outputs": [],
@@ -1553,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "id": "b5df5786",
    "metadata": {},
    "outputs": [
@@ -1571,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "id": "6d16c9f7",
    "metadata": {},
    "outputs": [],
@@ -1581,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "id": "49b3a2f2",
    "metadata": {},
    "outputs": [
